testcases/hereiam/negative/login_neg_TC12.sah
_setValue(_textbox("userId"), "db123");
_click(_div("LOGIN"));
